--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h1 id="title">마우스를 올려보세요!</h1>
+        <img id="image" src="example-image.jpg" alt="예시 이미지" />
     </div>
     <script src="script.js"></script>
 </body>
