--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1 id="title">마우스를 올려보세요!</h1>
-        <img id="image" src="example-image.jpg" alt="예시 이미지" />
+        <img id="image" src="https://github.com/hihi01000/chatgpt.github.io/blob/2e5f305d0005a659f2a411beeaab5e7688796e1b/example-image.jpg.png" alt="예시 이미지" />
     </div>
     <script src="script.js"></script>
 </body>
