--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <img id="ball" src="https://github.com/hihi01000/chatgpt.github.io/blob/eadc2de6fafae0ba48173104114f0ca6d4c627bc/images/example-image.png" alt="이미지" />
+        <img id="ball" src="https://raw.githubusercontent.com/hihi01000/chatgpt.github.io/main/images/example-image.png" alt="이미지" />
     </div>
     <script src="script.js"></script>
 </body>
