--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>이미지 인터랙션</title>
+    <title>축구공 이동 경로 표시</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <img id="ball" src="https://raw.githubusercontent.com/hihi01000/chatgpt.github.io/main/images/example-image.png" alt="이미지" />
+        <img id="ball" src="https://raw.githubusercontent.com/hihi01000/chatgpt.github.io/main/images/example-image.png" alt="축구공 이미지" />
     </div>
     <script src="script.js"></script>
 </body>
