--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>축구공 이동 경로 표시</title>
+    <title>축구공 게임</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="scoreboard">점수: <span id="score">0</span></div>
     <div class="container">
         <img id="ball" src="https://raw.githubusercontent.com/hihi01000/chatgpt.github.io/main/images/example-image.png" alt="축구공 이미지" />
     </div>
