--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
         <img id="ball" src="https://raw.githubusercontent.com/hihi01000/chatgpt.github.io/main/images/example-image.png" alt="축구공 이미지" />
     </div>
+    <audio id="music" src="https://github.com/hihi01000/chatgpt.github.io/raw/main/Super%20Mario%20Bross%20-%20Theme%20Song.mp3" preload="auto"></audio> <!-- 음악 파일 추가 -->
     <script src="script.js"></script>
 </body>
 </html>
